# mutagen_basic_sheet

./: Cargo.toml  README.md
src/: character.rs  character_app.rs  enums.rs  main.rs  mutation.rs  skills.rs  weapon_proficiencies.rs
src/base_data/: classes.json  skills.json  weapon_proficiencies.json
src/character_structs/: character.rs  mod.rs  mutation.rs  weapon_proficiencies.rs
src/enums/: mod.rs  proficiencies.rs  traits.rs
src/mock/: character.json
